--- a/README
+++ b/README
@@ -1,7 +1,2 @@
-This repository depends on git submodules.
-
-After downloading this repository execute:
-```
-git submodule init
-git submodule update
-```
+This repository is out of date and archived.
+Latest C examples are bundled with the latest release.
